{
    "name": "InputMap",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "199a5341-66e3-4ebc-b509-a95e4961a308",
            "actions": [
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "a83e429f-8dba-4be6-96b2-c4951d4bc852",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "61311b3d-2b54-4158-8126-74cc9fd80a1c",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}